--- a/android/lib/resource/src/main/res/values-sv/strings.xml
+++ b/android/lib/resource/src/main/res/values-sv/strings.xml
@@ -73,10 +73,11 @@
     <string name="confirm_no_email">Du är på väg att skicka problemrapporten utan att vi har möjlighet att besvara dig. Om du vill ha svar på din rapport måste du ange en e-postadress.</string>
     <string name="confirm_removal">Ja, logga ut enheten</string>
     <string name="congrats">Grattis!</string>
-    <string name="connect">Skydda min anslutning</string>
+    <string name="connected">Ansluten</string>
     <string name="connected_using_daita">%1$s använder %2$s</string>
     <string name="connecting">Ansluter</string>
     <string name="connecting_to_daemon">Ansluter till Mullvads systemtjänst...</string>
+    <string name="connection_details_in">In</string>
     <string name="continue_login">Fortsätt med inloggning</string>
     <string name="copied_logs_to_clipboard">Loggarna har kopierats till urklipp</string>
     <string name="copied_mullvad_account_number">Kopierade Mullvad-kontonummer till urklipp</string>
@@ -87,7 +88,6 @@
     <string name="create_new_list">Skapa ny lista</string>
     <string name="created_x">Skapades: %1$s</string>
     <string name="creating_new_account">Skapar konto...</string>
-    <string name="creating_secure_connection">SKAPAR SÄKER ANSLUTNING</string>
     <string name="critical_error">Kritiskt fel (kräver din uppmärksamhet)</string>
     <string name="current_method">Aktuell: %1$s</string>
     <string name="custom_dns_disable_mode_subtitle">Inaktivera alla &lt;b&gt;%1$s&lt;/b&gt; ovan för att aktivera inställningen.</string>
@@ -118,6 +118,7 @@
     <string name="discard">Ignorera</string>
     <string name="discard_changes">Ignorera ändringarna?</string>
     <string name="disconnect">Koppla från</string>
+    <string name="disconnected">Frånkopplad</string>
     <string name="disconnecting">Kopplar från</string>
     <string name="dismiss">Ignorera</string>
     <string name="dns_content_blockers_custom_dns_warning">Obs! Den här inställningen kan inte användas tillsammans med &lt;b&gt;Använd anpassad DNS-server&lt;/b&gt;.</string>
@@ -152,6 +153,8 @@
     <string name="failed_to_set_current_test_error">Kan inte ställas in som aktuell – API kan inte nås</string>
     <string name="failed_to_set_current_unknown_error">Kan inte ställas in som aktuell – Okänd anledning</string>
     <string name="faqs_and_guides">Vanliga frågor och guider</string>
+    <string name="feature_custom_mtu">MTU</string>
+    <string name="feature_udp_2_tcp">Obfuskering</string>
     <string name="filter">Filtrera</string>
     <string name="filtered">Filtrerat:</string>
     <string name="foreground_notification_channel_description">Visar nuvarande status för VPN-tunnel</string>
@@ -166,7 +169,6 @@
     <string name="import_overrides_bottom_sheet_override_warning">Om du importerar nya åsidosättningar kan tidigare importerade åsidosättningar ersättas.</string>
     <string name="import_overrides_import">Importera</string>
     <string name="import_overrides_text_title">Importera via text</string>
-    <string name="in_address">In</string>
     <string name="invalid_dns_servers">Anpassade DNS-serveradresser %1$s är ogiltiga</string>
     <string name="invalid_voucher">Kupongkoden är ogiltig.</string>
     <string name="ipv6_unavailable">Det gick inte att konfigurera IPv6. Inaktivera det i appen eller aktivera det på din enhet.</string>
@@ -248,11 +250,9 @@
     <string name="privacy_policy_label">Sekretesspolicy</string>
     <string name="problem_report_description">För att hjälpa dig mer effektivt kommer appens loggfil att bifogas i detta meddelande. Dina uppgifter förblir säkra och privata, eftersom de anonymiseras innan de skickas över en krypterad kanal.</string>
     <string name="providers">Leverantörer</string>
-    <string name="quantum_creating_secure_connection">SKAPAR KVANTSÄKER ANSLUTNING</string>
     <string name="quantum_resistant_info_first_paragaph">Den här funktionen gör WireGuard-tunneln resistent mot potentiella attacker från kvantdatorer.</string>
     <string name="quantum_resistant_info_second_paragaph">Den gör det genom att göra ett extra nyckelutbyte med en kvantsäker algoritm och kombinera resultatet med WireGuards vanliga kryptering. Det här extra steget använder ungefär 500 KiB i trafik varje gång en ny tunnel upprättas.</string>
     <string name="quantum_resistant_title">Kvantresistent tunnel</string>
-    <string name="quantum_secure_connection">KVANTSÄKER ANSLUTNING</string>
     <string name="reconnecting">Återansluter</string>
     <string name="redeem">Lös in</string>
     <string name="redeem_voucher">Lös in kupong</string>
@@ -263,8 +263,6 @@
     <string name="reset_to_default_button">Återställ till standard</string>
     <string name="save">Spara</string>
     <string name="search_placeholder">Sök efter …</string>
-    <string name="secure_connection">SÄKER ANSLUTNING</string>
-    <string name="secured">Skyddad</string>
     <string name="select_location">Välj plats</string>
     <string name="select_location_description">Medan du är ansluten maskeras din riktiga plats med en privat och säker plats i den valda regionen.</string>
     <string name="select_location_empty_text_first_row">Inga resultat för &lt;b&gt;%1$s&lt;/b&gt;.</string>
@@ -329,9 +327,6 @@
     <string name="udp_over_tcp_port_info">Vilken TCP-port som UDP-över-TCP-obfuskeringsprotokoll bör ansluta till på VPN-servern.</string>
     <string name="udp_over_tcp_port_title">UDP-över-TCP-port</string>
     <string name="undo">Ångra</string>
-    <string name="unsecured">Oskyddad</string>
-    <string name="unsecured_connection">OSÄKER ANSLUTNING</string>
-    <string name="unsecured_vpn_permission_error">Oskyddad (VPN-behörighet saknas)</string>
     <string name="unsupported_version">VERSION UTAN STÖD</string>
     <string name="unsupported_version_description">Din sekretess kan vara utsatt för risk med den här appversionen som inte stöds. Uppdatera nu.</string>
     <string name="unsupported_version_without_upgrade">Du kör en appversion som inte stöds.</string>
